--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">My name is Mauricio Guzmán</a></h2>
-									<p>This is my best project so far.</p>
+									<p>I'm a passionate Computer Science student immersed in mobile development</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic2.jpg" alt="" /></a>
 								<ul class="actions special">
