--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 									<header>
 										<h2><a href="#">Weather app</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>My second app, developed using Kotlin.</p>
+									<a href="#" class="image fit"><img src="images/screenshot1.jpg" alt="" /></a>
+									<p>Working on this project helped me get started with Kotlin. I used Kotlin Coroutines to perform Retrofit Api calls after getting the user's location.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Check it out</a></li>
+										<li><a href="https://github.com/maurot0p/Weather-app" class="button">Check it out</a></li>
 									</ul>
 								</article>
 								
