--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">My name is Mauricio Guzmán</a></h2>
-									<p>I'm a passionate Computer Science student immersed in mobile development</p>
+									<p>I'm a Computer Science student with a passion for mobile development.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic2.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -74,7 +74,7 @@
 										<h2><a href="#">Weather app</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/screenshot1.jpg" alt="" /></a>
-									<p>Working on this project helped me get started with Kotlin. I used Kotlin Coroutines to perform Retrofit Api calls after getting the user's location.</p>
+									<p>This project helped me get started with Kotlin. A simple weather app developed using Kotlin Coroutines to perform Retrofit Api calls after getting the user's location.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/maurot0p/Weather-app" class="button">Check it out</a></li>
 									</ul>
