--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<h2><a href="#">Weather app</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/screenshot1.jpg" alt="" /></a>
-									<p>This project helped me get started with Kotlin. A simple weather app developed using Kotlin Coroutines to perform Retrofit Api calls after getting the user's location.</p>
+									<p>This project helped me get started with Kotlin. A simple weather app developed using Kotlin Coroutines, Retrofit and LocationManager.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/maurot0p/Weather-app" class="button">Check it out</a></li>
 									</ul>
