--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
 										<li><a href="https://github.com/maurot0p/RecyclerViewApp" class="button">Check it out</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2><a href="#">Xamarin App</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/xamarin.jpeg" alt="" /></a>
+									<p>Simple App I used to learn about Xamarin multiplatform development and fine tune my C# skills.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/maurot0p/ListViewAction" class="button">Check it out</a></li>
+									</ul>
+								</article>
 							
 								
 							</section>
